# ClangCoverageTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.devcontainer/: devcontainer.json
cov1/: CMakeLists.txt  cov1_a.cpp  cov1_b.cpp
cov1/include/cov1/: cov1_a.h  cov1_b.h
cov1/tests/: cov1_tests.cpp
cov2/: CMakeLists.txt  cov2.cpp
cov2/include/cov2/: cov2.h
cov2/tests/: cov2_tests.cpp
